<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.zenjiro74.microwaveconverter.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <EditText
            android:id="@+id/editMemo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/label_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={viewModel.memo}"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtResult"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/layoutAfter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTime">

            <TextView
                android:id="@+id/labelAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/label_before_wattage" />

            <Spinner
                android:id="@+id/spnAfter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:contentDescription="@string/label_before_wattage"
                android:entries="@{viewModel.wattageArr}"
                android:onItemSelected="@{(parent, view, pos, id) -> viewModel.onItemSelectedWattage(parent, pos)}"
                android:selectedItemPosition="@{viewModel.afterIdx}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBefore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/layoutTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/labelBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/label_before_wattage" />

            <Spinner
                android:id="@+id/spnBefore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:contentDescription="@string/label_before_wattage"
                android:entries="@{viewModel.wattageArr}"
                android:onItemSelected="@{(parent, view, pos, id) -> viewModel.onItemSelectedWattage(parent, pos)}"
                android:selectedItemPosition="@{viewModel.beforeIdx}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toTopOf="@+id/layoutAfter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutBefore">

            <Spinner
                android:id="@+id/spnMinutes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/label_minutes"
                android:entries="@{viewModel.timeMinutesArr}"
                android:onItemSelected="@{(parent, view, pos, id) -> viewModel.onItemSelectedTimer(parent, pos)}" />

            <TextView
                android:id="@+id/labelMinutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/label_minutes" />

            <Spinner
                android:id="@+id/spnSeconds"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/label_seconds"
                android:entries="@{viewModel.timeSecondsArr}"
                android:onItemSelected="@{(parent, view, pos, id) -> viewModel.onItemSelectedTimer(parent, pos)}" />

            <TextView
                android:id="@+id/labelSeconds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/label_seconds" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@{viewModel.result}"
            app:layout_constraintBottom_toTopOf="@+id/editMemo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutAfter" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewModel.onClickSave(view)}"
            android:text="@string/btn_save"
            app:layout_constraintBottom_toTopOf="@+id/btnLoad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMemo" />

        <Button
            android:id="@+id/btnLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{(view) -> viewModel.onClickLoad(view)}"
            android:text="@string/btn_load"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>